--- a/test/index.html
+++ b/test/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
 
-    
+
     <input type="button" value="Kategorie 1" id="Kat1" border="1px solid">
     <br />
-    <br />    
+    <br />
     <input type="button" value="Kategorie 2" id="Kat2" border="1px solid">
     <br />
     <br />
@@ -22,6 +22,12 @@
     <input type="submit" value="Abbrechen">
     <input type="submit" value="Bestellen">
     <input type="submit" value="Rechnung Drucken">
-    
+
+<script>
+
+
+
+</script>
+
   </body>
 </html>
