--- a/test/index.html
+++ b/test/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//DE">
 <html>
   <head>
-    <title>New Document</title>
+    <title>Bestellung bitte</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
   </head>
   <body>
-
-
-    <input type="button" value="Kategorie 1" id="Kat1" border="1px solid">
+    <script src='js/function.js'></script>
+    <h1>Kategorie</h1>
+    <canvas id="cvs0" width=200px height=600px style="background-color:#F1F1F1 ;z-index:-1 ;border: 2px solid #000000;">
+            </canvas>
+    <canvas id="cvs1" width=900px height=600px style="background-color:#F1F1F1 ;z-index:-1 ;border: 2px solid #000000;">
+        </canvas>
+    <canvas id="cvs2" width=200px height=600px style="background-color:#F1F1F1 ;z-index:-1 ;border: 2px solid #000000;">
+            </canvas>
     <br />
     <br />
-    <input type="button" value="Kategorie 2" id="Kat2" border="1px solid">
+<!--    <canvas id="cvs3" width=200px height=200px style="background-color:#F1F1F1 ;position:absolute; top:602; left:1110;z-index:-1 ;border: 2px solid #000000;">
+</canvas>-->
+    <button onclick= 'show1()' >Speisen</button>
+    <input type="button" value="Kategorie 1" id="Kat1" border="1px solid" name="Speisen" onclick"zeig1()">           <!--<button onclick="myFunction()">Click me</button>  -->
     <br />
     <br />
-    <input type="button" value="Kategorie 3" id="Kat3" border="1px solid">
+    <input type="button" value="Kategorie 2" id="Kat2" border="1px solid" name="Getraenke">
     <br />
     <br />
-    <input type="button" value="Kategorie 4" id="Kat4" border="1px solid">
+    <input type="button" value="Kategorie 3" id="Kat3" border="1px solid" name="Nachspeisen">
+    <br />
+    <br />
+    <input type="button" value="Kategorie 4" id="Kat4" border="1px solid" name="Cocktails">
     <br />
     <br />
     <input type="submit" value="Abbrechen">
