--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
 <!--    <canvas id="cvs3" width=200px height=200px style="background-color:#F1F1F1 ;position:absolute; top:602; left:1110;z-index:-1 ;border: 2px solid #000000;">
 </canvas>-->
 <!--    <button onclick= 'show1()' >Speisen</button>   //so nicht möglich -->
+<form method='post'>
     <input type="button" value="Kategorie 1" id="Kat1" border="1px solid" name="Speisen" onclick"zeig1()">           <!--<button onclick="myFunction()">Click me</button>  -->
     <br />
     <br />
@@ -35,9 +36,11 @@
     <input type="submit" value="Bestellen">
     <input type="submit" value="Rechnung Drucken">
 
+</form>
 <script>
 
 console.log(data);
+// console.log(Speisen);
 /*
 let cvs2 = document.getElementById("cvs2");
  let ctx2=cvs2.getContext("2d");
