Knöpfe neu benannt

--- a/test/index.html
+++ b/test/index.html
@@ -33,17 +33,20 @@
 </canvas>-->
 <!--    <button onclick= 'show1()' >Speisen</button>   //so nicht möglich -->
 <form method='post'>
-    <input border="1px solid" id="Kat1" name="Speisen" onclick="showSpeisen()" type="button" value="Kategorie 1">
+    <input border="1px solid" id="Kat1" name="Speisen" onclick="showSpeisen()" type="button" value="Speisen">
     <!--<button onclick="myFunction()">Click me</button>  -->
     <br/>
     <br/>
-    <input border="1px solid" id="Kat2" name="Getraenke" type="button" value="Kategorie 2">
+    <input border="1px solid" id="Kat2" name="Getraenke" type="button" value="Getraenke">
     <br/>
     <br/>
-    <input border="1px solid" id="Kat3" name="Nachspeisen" type="button" value="Kategorie 3">
+    <input border="1px solid" id="Kat3" name="Nachspeisen" type="button" value="Nachspeisen">
     <br/>
     <br/>
-    <input border="1px solid" id="Kat4" name="Cocktails" type="button" value="Kategorie 4">
+    <input border="1px solid" id="Kat4" name="Cocktails" type="button" value="Cocktails">
+    <br/>
+    <br/>
+    <input border="1px solid" id="Kat5" name="Außer Haus verkauf" type="button" value="Außer Haus verkauf">
     <br/>
     <br/>
     <input type="submit" value="Abbrechen">
@@ -54,7 +57,7 @@
 <script>
 
 console.log(data);
-/*
+/*    klappt nicht
 var can0 = document.querySelector('canvas0');
   can0.style.position = 'absolute';
   can0.style.top = "80px";
@@ -73,15 +76,9 @@ var can0 = document.querySelector('canvas0');
 
 
 // console.log(Speisen);
-/*
-let cvs2 = document.getElementById("cvs2");
- let ctx2=cvs2.getContext("2d");
- ctx2.strokeStyle="#FF0000";
 
- ctx2.moveTo(450,0);
- ctx2.lineTo(0,450);
- ctx2.stroke();
-*/
+
+
 
 </script>
 
