--- a/test/index.html
+++ b/test/index.html
@@ -13,7 +13,7 @@
     <!-- <canvas id="cvs0" width=200px height=600px style="background-color:#F1F1F1 ;border: 2px solid #000000;">
             </canvas> -->
         </div>
-            <div class= "canvas1" id="warenkorb">
+            <div class= "canvas1" id="produkte">
     <!-- <canvas id="cvs1" width=900px height=600px style="background-color:#F1F1F1 ;border: 2px solid #000000;">
         </canvas> -->
           </div>
@@ -37,7 +37,7 @@
     <!--<button onclick="myFunction()">Click me</button>  -->
     <br/>
     <br/>
-    <input border="1px solid" id="Kat2" name="Getraenke" type="button" value="Getraenke">
+    <input border="1px solid" id="Kat2" name="Getraenke" onclick="showGetraenke()" type="button" value="Getraenke">
     <br/>
     <br/>
     <input border="1px solid" id="Kat3" name="Nachspeisen" type="button" value="Nachspeisen">
