Alle Knöpfe zeigen die Produkte aus den entsprechenden Kategorien

--- a/test/index.html
+++ b/test/index.html
@@ -40,13 +40,13 @@
     <input border="1px solid" id="Kat2" name="Getraenke" onclick="showGetraenke()" type="button" value="Getraenke">
     <br/>
     <br/>
-    <input border="1px solid" id="Kat3" name="Nachspeisen" type="button" value="Nachspeisen">
+    <input border="1px solid" id="Kat3" name="Nachspeisen" onclick="showNachspeisen()" type="button" value="Nachspeisen">
     <br/>
     <br/>
-    <input border="1px solid" id="Kat4" name="Cocktails" type="button" value="Cocktails">
+    <input border="1px solid" id="Kat4" name="Cocktails" onclick="showCocktails()" type="button" value="Cocktails">
     <br/>
     <br/>
-    <input border="1px solid" id="Kat5" name="Außer Haus verkauf" type="button" value="Außer Haus verkauf">
+    <input border="1px solid" id="Kat5" name="Außer Haus verkauf" onclick="showToGo()" type="button" value="Außer Haus verkauf">
     <br/>
     <br/>
     <input type="submit" value="Abbrechen">
