--- a/test/index.html
+++ b/test/index.html
@@ -50,7 +50,7 @@
     <br/>
     <br/>
     <input type="submit" value="Abbrechen">
-    <input onclick="bestellen()" type="button" value="Bestellen">
+    <input type="submit" onclick="bestellen()" type="button" value="Bestellen">
     <input type="submit" value="Rechnung Drucken">
 
 </form>
