MwSt wird ab jetzt in allen Kategorien richtig ausgelesen

--- a/test/index.html
+++ b/test/index.html
@@ -49,7 +49,7 @@
     <input border="1px solid" id="Kat5" name="Außer Haus verkauf" onclick="showToGo()" type="button" value="Außer Haus verkauf">
     <br/>
     <br/>
-    <input type="submit" value="Abbrechen" onclick="clearWarenkorb()">
+    <input type="submit" value="Abbrechen" onclick="clearWarenkorb(produkte)">
     <input type="button" onclick="bestellen()" type="button" value="Bestellen">
     <input type="submit" value="Rechnung Drucken">
 
