Wechselgeld funktioniert jetzt wirklich

--- a/test/index.html
+++ b/test/index.html
@@ -67,7 +67,7 @@
     <br/>
     <input type="submit" value="Abbrechen" onclick="clearWarenkorb(test)">
     <input type="button" onclick="bestellen()" type="button" value="Bestellen">
-    <input type="submit" onclick="rechnungZiehen()" value="Rechnung Drucken">
+    <input type="submit" onclick="rechnungZiehen()" value="Geld erhalten">
   <br />
   <br />
 
